--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,23 @@
-version: '3.1'
+version: '3.8'
 
 services:
+  mongo:
+    image: mongo
+    restart: always
+    environment:
+      MONGO_INITDB_ROOT_USERNAME: root
+      MONGO_INITDB_ROOT_PASSWORD: changethisnow69asrielwarnuaboutthis420teriteri
+
+  mongo-express:
+    image: mongo-express
+    restart: always
+    ports:
+      - 8081:8081
+    environment:
+      ME_CONFIG_MONGODB_ADMINUSERNAME: root
+      ME_CONFIG_MONGODB_ADMINPASSWORD: changethisnow69asrielwarnuaboutthis420teriteri
+      ME_CONFIG_MONGODB_URL: mongodb://root:changethisnow69asrielwarnuaboutthis420teriteri@mongo:27017/
+
   grasscutter:
     build: ./server
     stdin_open: true
@@ -12,7 +29,9 @@ services:
       - 22102:22102
     volumes:
       - ./data:/root/grass/data
+      - ./web:/root/grass/web
+      - ./plugins:/root/grass/plugins
       - ./config.json:/root/grass/config.json
       - ./boot.sh:/root/grass/boot.sh
       - ./keystore.p12:/root/grass/keystore.p12
-    command: ["/bin/sh", "-c", "/root/grass/boot.sh"]
+    command: [ "/bin/sh", "-c", "/root/grass/boot.sh" ]
