--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,9 +13,6 @@ env:
 jobs:
   buildx:
     runs-on: ubuntu-latest
-    defaults:
-      run:
-        working-directory: ./server
     steps:
       - name: Checkout
         uses: actions/checkout@v3
@@ -46,7 +43,7 @@ jobs:
       - name: Build and Push
         uses: docker/build-push-action@v3
         with:
-          context: .
+          context: ./server
           file: ./dockerfile
           platforms: linux/amd64,linux/arm64,linux/arm/v7
           push: true
