try fix for sha tag and add exclusion for yml, json and md in build

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -5,7 +5,10 @@ on:
   push:
     branches:
       - "main"
-
+    paths-ignore:
+      - '**/**.md'
+      - '**/**.yml'    
+      - '**/**.json'
 env:
   REGISTRY_GHCR: ghcr.io
   IMAGE_NAME: ${{ github.repository }}
@@ -29,9 +32,7 @@ jobs:
         uses: docker/metadata-action@v4
         with:
           images: ${{ env.IMAGE_NAME }}
-          tags: |
-            type=raw,value=latest
-            type=sha
+          tags: type=sha
 
       - name: Login to GHCR
         uses: docker/login-action@v2
@@ -47,6 +48,8 @@ jobs:
           file: ./server/dockerfile
           platforms: linux/amd64,linux/arm64,linux/arm/v7
           push: true
-          tags: ${{ env.REGISTRY_GHCR }}/${{ steps.meta.outputs.tags }}
-          cache-from: type=registry,ref=user/app:latest
-          cache-to: type=inline
+          tags: |
+            ${{ env.REGISTRY_GHCR }}/${{ env.IMAGE_NAME }}:latest
+            ${{ env.REGISTRY_GHCR }}/${{ steps.meta.outputs.tags }}
+          cache-from: type=gha
+          cache-to: type=gha
