--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -27,12 +27,18 @@ jobs:
         id: buildx
         uses: docker/setup-buildx-action@v2
 
-      - name: Extract Docker metadata
+      - name: Extract Docker sha tag
         id: meta
         uses: docker/metadata-action@v4
         with:
           images: ${{ env.IMAGE_NAME }}
           tags: type=sha
+      - name: Extract Docker latest tag
+        id: meta-latest
+        uses: docker/metadata-action@v4
+        with:
+          images: ${{ env.IMAGE_NAME }}
+          tags: type=raw, value=latest   
 
       - name: Login to GHCR
         uses: docker/login-action@v2
@@ -49,7 +55,7 @@ jobs:
           platforms: linux/amd64,linux/arm64,linux/arm/v7
           push: true
           tags: |
-            ${{ env.REGISTRY_GHCR }}/${{ env.IMAGE_NAME }}:latest
+            ${{ env.REGISTRY_GHCR }}/${{ steps.meta-latest.outputs.tags }}
             ${{ env.REGISTRY_GHCR }}/${{ steps.meta.outputs.tags }}
           cache-from: type=gha
           cache-to: type=gha
