move to alpine builds to save like 200% build time

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -51,7 +51,7 @@ jobs:
       - name: Build and Push
         uses: docker/build-push-action@v3
         with:
-          context: ./server
+          context: ./server/alpine
           file: ./server/dockerfile
           platforms: linux/amd64,linux/arm64,linux/arm/v7
           push: true
