--- a/server/alpine/dockerfile
+++ b/server/alpine/dockerfile
@@ -3,4 +3,4 @@ COPY ./setup.sh /root/setup.sh
 WORKDIR /root
 ENV GC_RELEASE="https://api.github.com/repos/Grasscutters/Grasscutter/releases/latest"
 ENV GC_RES_REPO="https://github.com/Koko-boya/Grasscutter_Resources.git"
-RUN chmod +x ./setup.sh && ./setup.sh
+RUN ./setup.sh
