--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,8 +23,7 @@ services:
       ME_CONFIG_MONGODB_URL: mongodb://root:changethisnow69asrielwarnuaboutthis420teriteri@mongo:27017/
 
   grasscutter:
-    # build: ./server
-    image: gcdockerubuntu
+    image: ghcr.io/joshua-noakes1/grasscutters-docker
     container_name: grasscutter
     stdin_open: true
     tty: true
@@ -39,4 +38,3 @@ services:
       - ./plugins:/root/grass/plugins
       - ./config.json:/root/grass/config.json
       - ./keystore.p12:/root/grass/keystore.p12
-    # command: [ "/bin/sh", "-c", "/root/grass/boot.sh" ]
