--- a/server/dockerfile
+++ b/server/dockerfile
@@ -1,8 +1,8 @@
-FROM ubuntu:latest
+FROM alpine:latest
 COPY ./setup.sh /root/setup.sh
 COPY ./boot.sh /root/boot.sh
 WORKDIR /root
-ENV GC_RELEASE="https://api.github.com/repos/Grasscutters/Grasscutter/releases/latest"
-ENV GC_RES_REPO="https://github.com/Koko-boya/Grasscutter_Resources.git"
+ENV GC_RELEASE="https://api.github.com/repos/Grasscutters/Grasscutter/releases/"
+ENV GC_RES_REPO="https://gitlab.com/yukiz/GrasscutterResources.git"
 RUN ./setup.sh
 ENTRYPOINT [ "/bin/sh", "/root/boot.sh" ]
