--- a/server/dockerfile
+++ b/server/dockerfile
@@ -1,18 +1,20 @@
 # Setup Container
 FROM alpine:latest
-
 LABEL org.opencontainers.image.titke "Grasscutter-Docker"
 LABEL org.opencontainers.image.description "GC Docker is a docker container for dealing with Grasscutter"
 
-
+# Copy and configure Build
 COPY ./build/downloadResources.sh /root/downloadResources.sh
 COPY ./container/boot.sh /root/boot.sh
 COPY ./container/updateFile.sh /root/updateFile.sh
 WORKDIR /root
 ENV GC_RELEASE="https://api.github.com/repos/Grasscutters/Grasscutter/releases/"
-# ENV GC_RES_REPO="https://github.com/Koko-boya/Grasscutter_Resources.git"
-ENV GC_RES_REPO="https://gitlab.com/yukiz/GrasscutterResources.git" 
+ENV GC_RES_REPO="https://github.com/Koko-boya/Grasscutter_Resources.git"
+
+ENV GC_RES_REPO_ALT="https://gitlab.com/yukiz/GrasscutterResources.git"
+ENV USE_ALT_RES_REPO="true"
 # ^^ Has better support for 3.x+ content but take like twice as long to download because gitlab^^
+
 # Install and Update Grasscutter
 RUN apk update
 RUN apk add --no-cache git curl wget openjdk17-jre-headless jq
